Finishes tests and documentation

--- a/resources/mail/security-alert.mjml
+++ b/resources/mail/security-alert.mjml
@@ -1,16 +1,24 @@
-<!-- @TODO: Style -->
 <mjml>
     <mj-body>
         <mj-section>
             <mj-column>
-                <mj-text>Hello!</mj-text>
+                <mj-text font-size="18px">Hello!</mj-text>
+            </mj-column>
+        </mj-section>
+        <mj-section>
+            <mj-column background-color="#f0f8ff" padding="16px">
                 <mj-text>There have been recent changes to your account. The following fields have been updated.</mj-text>
-                <mj-raw>@foreach($fields as $field)</mj-raw>
-                    <mj-text>- {{ $field }}</mj-text>
+                <mj-raw>@foreach($fields as $key => $field)</mj-raw>
+                <mj-text>- {{ $key }}</mj-text>
                 <mj-raw>@endforeach</mj-raw>
                 <mj-text>If you did not make this change, please report this immediately.</mj-text>
                 <mj-text>If you intentionally changed your account, please ignore this notification.</mj-text>
                 <mj-text>Thank you.</mj-text>
+            </mj-column>
+        </mj-section>
+        <mj-section>
+            <mj-column>
+                <mj-text align="center" font-size="14px" color="#b0c4de">&copy; Copyright {{ now()->format('o') }} {{ env('APP_NAME', 'Laravel') }}. All rights reserved.</mj-text>
             </mj-column>
         </mj-section>
     </mj-body>
