--- a/resources/mail/login-from-new-ip.mjml
+++ b/resources/mail/login-from-new-ip.mjml
@@ -1,14 +1,22 @@
-<!-- @TODO: Style -->
 <mjml>
     <mj-body>
         <mj-section>
             <mj-column>
-                <mj-text>New sign in to Garbanzo</mj-text>
-                <mj-text>Account: {{ $login->user->email }}</mj-text>
-                <mj-text>IP: {{ $login->ip_address }}</mj-text>
-                <mj-text>Location: {{ $login->location_data['city'] }}, {{ $login->location_data['region'] }}, {{ $login->location_data['countryCode'] }}</mj-text>
-                <mj-text>Time: {{ $login->last_login_at->format('m/d/o, h:i:s A T') }}</mj-text>
+                <mj-text font-size="18px">New sign in to {{ env('APP_NAME', 'Laravel') }}</mj-text>
+            </mj-column>
+        </mj-section>
+        <mj-section>
+            <mj-column background-color="#f0f8ff" padding="16px">
+                <mj-text>- Account: {{ $login->user->email }}</mj-text>
+                <mj-text>- IP: {{ $login->ip_address }}</mj-text>
+                <mj-text>- Location: {{ $login->location_data['city'] }}, {{ $login->location_data['region'] }}, {{ $login->location_data['countryCode'] }}</mj-text>
+                <mj-text>- Time: {{ $login->last_login_at->format('m/d/o, h:i:s A T') }}</mj-text>
                 <mj-text>If this is expected you may ignore this email. If not, please reset your password immediately.</mj-text>
+            </mj-column>
+        </mj-section>
+        <mj-section>
+            <mj-column>
+                <mj-text align="center" font-size="14px" color="#b0c4de">&copy; Copyright {{ now()->format('o') }} {{ env('APP_NAME', 'Laravel') }}. All rights reserved.</mj-text>
             </mj-column>
         </mj-section>
     </mj-body>
