--- a/resources/mail/security-alert.mjml
+++ b/resources/mail/security-alert.mjml
@@ -11,6 +11,7 @@
                 <mj-raw>@foreach($fields as $key => $field)</mj-raw>
                 <mj-text>- {{ $key }}</mj-text>
                 <mj-raw>@endforeach</mj-raw>
+                <mj-text>These changes were made on {{ $updated_at->toDateTimeSting() }}.</mj-text>
                 <mj-text>If you did not make this change, please report this immediately.</mj-text>
                 <mj-text>If you intentionally changed your account, please ignore this notification.</mj-text>
                 <mj-text>Thank you.</mj-text>
